Add email support

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,12 @@ service: apartment-search
 provider:
   name: aws
   runtime: nodejs8.10
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - lambda:InvokeFunction
+      Resource: "*"
+
 
 functions:
   aptsearch:
