--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Saumitra Bhanage <bhanage.saumitra@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.302.0",
     "cheerio": "^1.0.0-rc.2",
     "node-craigslist": "^1.2.2",
     "node-fetch": "^2.1.2"
